fixed z-index issue for footer, had to define position

--- a/Roland/static/css/header.css
+++ b/Roland/static/css/header.css
@@ -91,7 +91,8 @@
       background-color:white;
       text-align:center;
       width:100%;
-      z-index:2;
+      z-index:3;
+      position:relative;
     }
     footer p {
       color:rgb(50,50,50);
