--- a/Roland/static/css/slides.css
+++ b/Roland/static/css/slides.css
@@ -27,7 +27,7 @@
       position:absolute;
       text-decoration: none;
       font-family: 'Arimo', sans-serif;
-      z-index:10;
+      z-index:2;
     }
 
     #slides .slidesjs-previous {
